@@ -16,6 +16,7 @@ Version 1.3.15+svn:
   * User interface
     * During dialogs the speaker is shown in the sidebar and highlighted.
     * Show unit standing animations and idle animations are now separate options
+    * Removed broken "Host network game" option from multiplayer menu
 
 Version 1.3.15:
   * Language and translations
