@@ -21,6 +21,7 @@ Version 1.3.15+svn:
    * During dialogs the speaker is shown in the sidebar and highlighted.
    * During ai moves the source hex is no longer highlighted.
    * show unit standing animations and idle animations are now separate options
+   * Removed broken "Host network game" option from multiplayer menu (bug #10800)
  * miscellaneous and bug fixes:
    * Fixed networking not to timeout with slow connections but timeout faster
      with lost connection (partialy fix bug #10967)
